--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - .:/app:cached
       - vendor:/app/vendor:cached
       - /app/.git
+      - .ssh:/root/.ssh:rw
       - /app/.bundle
     depends_on:
       - db
