--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       /bin/bash -c "
         cd test/dummy &&
         rm -rf tmp/pids/server.pid &&
-        rails s -p 3000 -b '0.0.0.0'
+        bundle exec rails s -p 3000 -b '0.0.0.0'
       "
     ports:
       - "4003:3000"
